--- a/openatlas/templates/reference/insert.html
+++ b/openatlas/templates/reference/insert.html
@@ -8,5 +8,5 @@
     {% endif %}
 {% endblock %}
 {% block content %}
-    {{ form|display_form(code)|safe }}
+    {{ form|display_form(code, manual_page='menu/reference') }}
 {% endblock %}
