--- a/openatlas/templates/event/update.html
+++ b/openatlas/templates/event/update.html
@@ -12,5 +12,5 @@
             {{ _('reload')|button(url_for('event_update', id_=event.id)) }}
         </div>
     {% endif %}
-    {{ form|display_form }}
+    {{ form|display_form(manual_page='menu/event') }}
 {% endblock %}
