--- a/openatlas/templates/file/update.html
+++ b/openatlas/templates/file/update.html
@@ -4,5 +4,5 @@
     {{ [[_('files'), 'file_index'], file, _('edit')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form }}
+    {{ form|display_form(manual_page='tools/file') }}
 {% endblock %}
