--- a/openatlas/templates/hierarchy/insert.html
+++ b/openatlas/templates/hierarchy/insert.html
@@ -4,5 +4,5 @@
     {{ [[_('types'), 'node_index'], '+ ' + _(param)|uc_first]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form }}
+    {{ form|display_form(manual_page='form/type') }}
 {% endblock %}
