--- a/openatlas/templates/login/reset_password.html
+++ b/openatlas/templates/login/reset_password.html
@@ -4,5 +4,5 @@
 {% endblock %}
 {% block content %}
     <p>{{ _('info password reset') }}</p>
-    {{ form|display_form('password-reset')|safe }}
+    {{ form|display_form('password-reset') }}
 {% endblock %}
