--- a/openatlas/templates/object/insert.html
+++ b/openatlas/templates/object/insert.html
@@ -4,5 +4,5 @@
     {{ [[_('object'), 'object_index'], '+ ' + g.classes.E84.name]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form()|safe }}
+    {{ form|display_form(manual_page='menu/object') }}
 {% endblock %}
