--- a/openatlas/templates/user/insert.html
+++ b/openatlas/templates/user/insert.html
@@ -4,7 +4,7 @@
     {{ [[_('admin'), 'admin_index'], '+ ' + ('user')|uc_first]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form('user-form')|safe }}
+    {{ form|display_form('user-form', manual_page='admin/user') }}
     <script>
         $(document).ready(function () {
             $("#show_passwords").after(function() {
