--- a/openatlas/templates/user/update.html
+++ b/openatlas/templates/user/update.html
@@ -4,5 +4,5 @@
     {{ [[_('admin'), 'admin_index'], _('user'), user, _('edit')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form('user-form')|safe }}
+    {{ form|display_form('user-form', manual_page='admin/user') }}
 {% endblock %}
