--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -9,7 +9,7 @@
     </div>
     <div>
         <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="true" href="#menu-tab-standard">{{ _('standard types')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#menu-tab-standard">{{ _('standard types')|uc_first }}</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#menu-tab-custom">{{ _('custom types')|uc_first }}</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#menu-tab-value">{{ _('value types')|uc_first }}</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#menu-tab-places">{{ _('places')|uc_first }}</a></li>
