--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -1,55 +1,50 @@
 {%
-    set tabs = [
-        {'id': 'info', 'header': _('info')},
-        {'id': 'source', 'header': _('source')},
-        {'id': 'event', 'header': _('event')},
-        {'id': 'relation', 'header': _('relation')},
-        {'id': 'member-of', 'header': _('member of')},
-        {'id': 'reference', 'header': _('reference')},
-        {'id': 'file', 'header': _('files')},
-    ]
+    set tabs = [{'id': 'info', 'header': _('info')},
+                {'id': 'source',
+                 'header': _('source'),
+                 'buttons': [{'label': _('add'), 'url': url_for('entity_add_source', id_=actor.id), 'group': 'contributor'},
+                             {'label': _('source'), 'url': url_for('source_insert', origin_id=actor.id), 'group': 'contributor'}]}
+                ]
+
 %}
 
-{% extends "tab.html" %}
+{% extends "tabs.html" %}
 {% block title_name %} - {{ actor.name }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('actor'), 'actor_index'], actor.name]|crumb }}
 {% endblock %}
 
+        {'id': 'event', 'header': _('event')},
+        {'id': 'relation', 'header': _('relation')},
+        {'id': 'member-of', 'header': _('member of')},
+        {'id': 'reference', 'header': _('reference')},
+        {'id': 'file', 'header': _('files')},
+
+{% block tab_info %}
+    <div class="toolbar">
+        {{ 'menu/actor'|manual }}
+        {% if 'contributor'|is_authorized %}
+            {{ _('edit')|button(url_for('actor_update', id_=actor.id)) }}
+            {{ actor|display_delete_link }}
+        {% endif %}
+        {{ actor.id|bookmark_toggle }}
+    </div>
+    <h1>{{ actor.name }}</h1>
+    <div>
+        {{ profile_image_id|display_profile_image }}
+        <div style="float:left;">
+            {{ info|display_info }}
+            {{ actor|note }}
+            {{ actor|display_external_references }}
+            {{ actor|description }}
+        </div>
+        <div style="clear:both;"></div>
+    </div>
+{% endblock %}
+
 {% macro tab_content(tab_id) -%}
 
-    {% if tab_id == 'info': %}
-        <div class="toolbar">
-            {{ 'menu/actor'|manual }}
-            {% if 'contributor'|is_authorized %}
-                {{ _('edit')|button(url_for('actor_update', id_=actor.id)) }}
-                {{ actor|display_delete_link }}
-            {% endif %}
-            {{ actor.id|bookmark_toggle }}
-        </div>
-        <h1>{{ actor.name }}</h1>
-        <div>
-            {{ profile_image_id|display_profile_image }}
-            <div style="float:left;">
-                {{ info|display_info }}
-                {{ actor|note }}
-                {{ actor|display_external_references }}
-                {{ actor|description }}
-            </div>
-            <div style="clear:both;"></div>
-        </div>
-
-    {% elif tab_id == 'source': %}
-
-        {% if 'contributor'|is_authorized %}
-            <div class="toolbar">
-                {{ _('add')|button(url_for('entity_add_source', id_=actor.id)) }}
-                {{ _('source')|button(url_for('source_insert', origin_id=actor.id)) }}
-            </div>
-        {% endif %}
-        {{ tables.source.display('source')|safe }}
-
-    {% elif tab_id == 'event': %}
+    {% if tab_id == 'event': %}
 
         {% if 'contributor'|is_authorized %}
             <div class="toolbar">
