Added Roland to contributors

--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -94,6 +94,7 @@
             Nina Brundke<br>
             Peter Andorfer<br>
             Petra Heinicker<br>
+            Roland Filzwieser<br>
             Sandra Lehecka<br>
             Saranya Balasubramanian<br>
             Stefan Probst
