--- a/openatlas/templates/tabs.html
+++ b/openatlas/templates/tabs.html
@@ -40,6 +40,6 @@
                 {% endfor %}
             </div>
         </div>
-        {% block content_rest %}{% endblock %}
+        {% block content_map %}{% endblock %}
     </div>
 {% endblock %}
