--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -26,7 +26,7 @@
     </div>
 {% endblock %}
 
-{% block content_rest %}
+{% block content_map %}
     <div class="col-6">
         {% if gis_data %}
             <div id="map" class="map"></div>
