--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -17,7 +17,7 @@
     <div>
         {{ profile_image_id|display_profile_image }}
         <div style="float:left;">
-            {{ tabs.info.info|display_info }}
+            {{ info|display_info }}
             {{ actor|note }}
             {{ actor|display_external_references }}
             {{ actor|description }}
