Tabs template - source

--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -1,50 +1,35 @@
-{% extends "layout.html" %}
+{% extends "tabs.html" %}
 {% block title_name %} - {{ source.name }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('source'), 'source_index'], source.name]|crumb }}
 {% endblock %}
-{% block content %}
-<div >
-    <ul class="nav nav-tabs" role="tablist">
-        <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-event">{{ _('event')|uc_first }} {{ tables.event|format_tab_number }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-actor">{{ _('actor')|uc_first }} {{ tables.actor|format_tab_number }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-place">{{ _('place')|uc_first }} {{ tables.place|format_tab_number }}</a></li>
-        {% for table_name in ['feature', 'stratigraphic_unit', 'find', 'human_remains'] %}
-            {% if tables[table_name].rows %}
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-{{ table_name }}">
-                        {{ _(table_name|replace('_', ' '))|uc_first }} {{ tables[table_name]|format_tab_number }}
-                    </a>
-                </li>
-            {% endif %}
-        {% endfor %}
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-reference">{{ _('reference')|uc_first }} {{ tables.reference|format_tab_number }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-text">{{ _('texts')|uc_first }} {{ tables.text|format_tab_number }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-file">{{ _('files')|uc_first }} {{ tables.file|format_tab_number }}</a></li>
-    </ul>
-    <div class="tab-content">
-        <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
-            <div class="toolbar">
-                {{ 'menu/source'|manual }}
-                {% if 'contributor'|is_authorized %}
-                    {{ _('edit')|button(url_for('source_update', id_=source.id)) }}
-                    {{ source|display_delete_link }}
-                {% endif %}
-                {{ source.id|bookmark_toggle }}
-            </div>
-            <h1>{{ source.name }}</h1>
-            <div>
-                {{ profile_image_id|display_profile_image }}
-                <div style="float:left;">
-                    {{ info|display_info }}
-                    {{ source|note }}
-                    {{ source|display_external_references }}
-                    {{ source|description }}
-                </div>
-                <div style="clear:both;"></div>
-            </div>
+
+{% block tab_info %}
+    <div class="toolbar">
+        {{ 'menu/source'|manual }}
+        {% if 'contributor'|is_authorized %}
+            {{ _('edit')|button(url_for('source_update', id_=source.id)) }}
+            {{ source|display_delete_link }}
+        {% endif %}
+        {{ source.id|bookmark_toggle }}
+    </div>
+    <h1>{{ source.name }}</h1>
+    <div>
+        {{ profile_image_id|display_profile_image }}
+        <div style="float:left;">
+            {{ info|display_info }}
+            {{ source|note }}
+            {{ source|display_external_references }}
+            {{ source|description }}
         </div>
+        <div style="clear:both;"></div>
+    </div>
+{% endblock %}
+
+{% block whatever %}
+<div >
+
+    <div class="tab-content">
         {% for name in ['event', 'actor', 'place', 'feature', 'stratigraphic_unit', 'find', 'human_remains'] %}
             {% if name not in ['feature', 'stratigraphic_unit', 'find'] or tables[name].rows %}
                 <div class="tab-pane fade" role="tabpanel" id="tab-{{ name }}">
