--- a/openatlas/templates/index/changelog.html
+++ b/openatlas/templates/index/changelog.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('changelog')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('overview'), 'index'], _('changelog')]|crumb }}
+    {{ [_('changelog')]|crumb }}
 {% endblock %}
 {% block content %}
     {% for version_name, version in versions.items() %}
