--- a/openatlas/templates/index/unsubscribe.html
+++ b/openatlas/templates/index/unsubscribe.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    {{ [[_('overview'), 'index'], _('unsubscribe newsletter')]|crumb }}
+    {{ [_('unsubscribe newsletter')]|crumb }}
 {% endblock %}
 {% block content %}
     {{ text }}
