--- a/openatlas/templates/login/reset_password.html
+++ b/openatlas/templates/login/reset_password.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    {{ [[_('overview'), 'index'], [_('login'), 'login'], _('Forgot your password?')]|crumb }}
+    {{ [[_('login'), 'login'], _('Forgot your password?')]|crumb }}
 {% endblock %}
 {% block content %}
     <p>{{ _('info password reset') }}</p>
