--- a/openatlas/templates/search/index.html
+++ b/openatlas/templates/search/index.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block title_name %} - {{ _('search')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('overview'), 'index'], _('search')]|crumb }}
+    {{ [_('search')]|crumb }}
 {% endblock %}
 {% block content %}
     <div style="float:left;">
