--- a/openatlas/templates/index/content.html
+++ b/openatlas/templates/index/content.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    {{ [[_('overview'), 'index'], _(title)]|crumb }}
+    {{ [_(title)]|crumb }}
 {% endblock %}
 {% block content %}
     {{ text|safe }}
