--- a/openatlas/templates/index/feedback.html
+++ b/openatlas/templates/index/feedback.html
@@ -1,28 +1,36 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('feedback')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('overview'), 'index'], _('feedback')]|crumb }}
+    {{ [_('feedback')]|crumb }}
 {% endblock %}
 {% block content %}
     <p>
         {{ _('feedback intro') }}:
     </p>
-    <p>
-        - {{ _('feedback redmine') }}:
-        <a href="http://redmine.openatlas.eu/projects/uni" target="_blank" rel="noopener">
-            https://redmine.openatlas.eu
-        </a>
-    </p>
-    {% if session.settings.mail_recipients_feedback[0] %}
-        <p>
-            - {{ _('feedback mail') }}
-            <a href="mailto:{{ session.settings.mail_recipients_feedback[0] }}">
-                {{ session.settings.mail_recipients_feedback[0] }}
-            </a>
-        </p>
-        {% if session.settings.mail and session.settings.mail_recipients_feedback %}
-            <p>- {{ _('feedback_form') }}:</p>
-            {{ form|display_form('feedback-form') }}
+    <ul>
+        <li>
+            <p>
+                {{ _('feedback redmine') }}:
+                <a href="http://redmine.openatlas.eu/projects/uni" target="_blank" rel="noopener">
+                    https://redmine.openatlas.eu
+                </a>
+            </p>
+        </li>
+        {% if session.settings.mail_recipients_feedback[0] %}
+            <li>
+                <p>
+                    {{ _('feedback mail') }}
+                    <a href="mailto:{{ session.settings.mail_recipients_feedback[0] }}">
+                        {{ session.settings.mail_recipients_feedback[0] }}
+                    </a>
+                </p>
+            </li>
         {% endif %}
-    {% endif %}
+        {% if session.settings.mail and session.settings.mail_recipients_feedback %}
+            <li>
+                <p>{{ _('feedback_form') }}:</p>
+                {{ form|display_form('feedback-form') }}
+            </li>
+        {% endif %}
+    </ul>
 {% endblock %}
