--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('model')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('overview'), 'index'], _('network visualization')]|crumb }}
+    {{ [_('network visualization')]|crumb }}
 {% endblock %}
 {% block content %}
     <link rel="stylesheet" href="/static/node_modules/huebee/dist/huebee.min.css">
