--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -1,9 +1,43 @@
-{% extends "layout.html" %}
+{% extends "tabs.html" %}
 {% block title_name %} - {{ entity.name }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('files'), 'file_index'], entity.name]|crumb }}
 {% endblock %}
-{% block content %}
+
+{% block tab_info %}
+    <div class="toolbar">
+        {{ 'tools/file'|manual }}
+        {% if 'contributor'|is_authorized %}
+            {{ _('edit')|button(url_for('file_update', id_=entity.id)) }}
+            {{ entity|display_delete_link }}
+        {% endif %}
+        {{ entity.id|bookmark_toggle }}
+        {% if missing_file %}
+            <span class="error">{{ _('missing file')|uc_first }}!</span>
+        {% else %}
+            {{ _('download')|button(url_for('download_file', filename=filename)) }}
+        {% endif %}
+    </div>
+    <h1>{{ entity.name }}</h1>
+    <div>
+        <div style="float:left;">
+            {{ info|display_info }}
+        </div>
+        <div class="preview" style="float:left;">
+            {% if preview %}
+                <a href="{{ url_for('display_file', filename=filename) }}" target="_blank">
+                    <img alt="{{ filename }}" src="{{ url_for('display_file', filename=filename) }}">
+                </a>
+            {% elif not missing_file %}
+                {{ _('no preview available')|uc_first }}
+            {% endif %}
+        </div>
+    </div>
+    <div style="clear:both;"></div>
+    {{ entity|description }}
+{% endblock %}
+
+{% block orginal %}
 <div class="row">
     <div class="col-6">
         <ul class="nav nav-tabs" role="tablist">
@@ -24,38 +58,6 @@
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-reference">{{ _('reference')|uc_first }} {{ tables.reference|format_tab_number }}</a></li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
-                <div class="toolbar">
-                    {{ 'tools/file'|manual }}
-                    {% if 'contributor'|is_authorized %}
-                        {{ _('edit')|button(url_for('file_update', id_=entity.id)) }}
-                        {{ entity|display_delete_link }}
-                    {% endif %}
-                    {{ entity.id|bookmark_toggle }}
-                    {% if missing_file %}
-                        <span class="error">{{ _('missing file')|uc_first }}!</span>
-                    {% else %}
-                        {{ _('download')|button(url_for('download_file', filename=filename)) }}
-                    {% endif %}
-                </div>
-                <h1>{{ entity.name }}</h1>
-                <div>
-                    <div style="float:left;">
-                        {{ info|display_info }}
-                    </div>
-                    <div class="preview" style="float:left;">
-                        {% if preview %}
-                            <a href="{{ url_for('display_file', filename=filename) }}" target="_blank">
-                                <img alt="{{ filename }}" src="{{ url_for('display_file', filename=filename) }}">
-                            </a>
-                        {% elif not missing_file %}
-                            {{ _('no preview available')|uc_first }}
-                        {% endif %}
-                    </div>
-                </div>
-                <div style="clear:both;"></div>
-                {{ entity|description }}
-            </div>
             <div class="tab-pane fade" role="tabpanel" id="tab-source">
                 {% if 'contributor'|is_authorized %}
                 <div class="toolbar">
